Use OpenApis to generate DTOs and Apis in Storage
